--- a/mid-page.html
+++ b/mid-page.html
@@ -10,9 +10,9 @@
            
         </tr>
         <tr>
-                <td>  <label for="investingamount">Investing amount</label> </td>
+                <td>  <label for="amrit">Investing amount</label> </td>
                 <td> 
-                        <input type="number" id="investingamount" name="investingamount">
+                        <input type="number" id="amrit" name="investingamount">
                 </td>
         </tr>
         <tr>
@@ -24,7 +24,7 @@
         $("#result-text").text("Car Model - " +localStorage.getItem('car-model')+ " & Number of Cars - "+ localStorage.getItem('number-of-car'));
         $("#submitbtn").click(function(evt){
             evt.preventDefault();
-            localStorage.setItem('invest-amount', $("#investingamount").val());
+            localStorage.setItem('invest-amount', $("#amrit").val());
             window.location.href = "result.html";
         });
 
