--- a/mid-page.html
+++ b/mid-page.html
@@ -16,7 +16,7 @@
                 </td>
         </tr>
         <tr>
-                <td> <input type="submit" value="Submit" id="submitbtn"> </td>
+                <td> <input type="submit" value="Submit here" id="submitbtn"> </td>
             </tr>
     </table>
     <script type="text/javascript">
